product card text overflow issue solved

--- a/frontend/src/Components/Product/Product.css
+++ b/frontend/src/Components/Product/Product.css
@@ -37,10 +37,9 @@
   width: 45%;
 }
 .product-card-title {
-  max-width: 90%;
-  max-height: 34px;
-  display: flex;
+  white-space: nowrap;
   overflow: hidden;
+  text-overflow: ellipsis;
 }
 .skelton-product-title {
   min-height: 10px;
@@ -58,10 +57,10 @@
   background-position: var(--seklton-position);
   animation: skelton 3s infinite;
 }
-
 .card-text {
   color: rgb(80, 80, 80);
   font-weight: 600;
+  white-space: nowrap;
 }
 .card-text del {
   font-size: 11px;
@@ -117,7 +116,6 @@
     height: 110px !important;
   }
   .product-card-title {
-    max-width: 95%;
     font-size: 14.3px;
   }
   .cart-icon {
@@ -139,7 +137,7 @@
   }
   .product-action-btns {
     padding-top: 7px;
-}
+  }
 }
 
 @media (max-width: 350px) {
